feat: add React + Vite frontend with latest libraries
- Add Vite + React frontend to SOA boilerplate
- TanStack Query for data fetching and caching
- TanStack Router for routing
- Sonner for toast notifications
- Shadcn UI components (Button, Input, Label, Card, Badge)
- Tailwind CSS for styling
- Full TypeScript support
- Pages: Sign In, Sign Up, Products, Orders, Profile
- API integration with backend gateway
- Shopping cart functionality
- Order tracking and management
- User profile management

Tech Stack:
- React 19.2.0
- Vite 7.3.1
- TanStack Query 5.0.5
- TanStack Router 2.1.7
- Sonner 2.0.5
- Tailwind CSS 4.0.11
- Lucide React 0.468.0
- Axios 1.8.4

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,57 @@
+# ============================================
 # Server Configuration
+# ============================================
 NODE_ENV=development
 PORT=3000
 
-# Database (PostgreSQL)
+# ============================================
+# Database (PostgreSQL 17)
+# ============================================
+POSTGRES_USER=soa_user
+POSTGRES_PASSWORD=soa_password
+POSTGRES_DB=soa_db
+POSTGRES_PORT=5432
 DATABASE_URL=postgresql://soa_user:soa_password@localhost:5432/soa_db
 
-# Redis (Caching & Sessions)
+# ============================================
+# Redis (IORedis v5)
+# ============================================
 REDIS_URL=redis://localhost:6379
 
+# ============================================
 # Better Auth Configuration
+# ============================================
 AUTH_SECRET=your-super-secret-auth-key-change-in-production-min-32-chars
 AUTH_URL=http://localhost:3000/auth
 BETTER_AUTH_ORIGIN=http://localhost:3000
-
-# Service URLs
-USER_SERVICE_URL=http://localhost:3001
-PRODUCT_SERVICE_URL=http://localhost:3002
-ORDER_SERVICE_URL=http://localhost:3003
-
-# CORS Origins (comma-separated)
-CORS_ORIGINS=http://localhost:3000,http://localhost:5173
-
-# Logging
-LOG_LEVEL=info
+BETTER_AUTH_SECRET=your-super-secret-auth-key-change-in-production-min-32-chars
 
 # OAuth Providers (Optional)
+# ============================================
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
+# ============================================
+# CORS Configuration
+# ============================================
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# ============================================
+# Service URLs (Internal Docker)
+# ============================================
+USER_SERVICE_URL=http://localhost:3001
+PRODUCT_SERVICE_URL=http://localhost:3002
+ORDER_SERVICE_URL=http://localhost:3003
+
+# ============================================
+# Frontend Configuration
+# ============================================
+FRONTEND_PORT=5173
+VITE_API_URL=http://localhost:3000
+
+# ============================================
+# Logging Configuration
+# ============================================
+LOG_LEVEL=info
