--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "type": "module",
   "scripts": {
     "install": "npm install --legacy-peer-deps",
+    "install:frontend": "cd frontend && npm install",
     "build": "npm run build:all",
-    "build:all": "cd shared/types && npm run build && cd shared/utils && npm run build && cd shared/drizzle && npm run build && cd services/user-service && npm run build && cd services/product-service && npm run build && cd services/order-service && npm run build && cd gateway && npm run build",
-    "dev": "concurrently \"cd gateway && npm run dev\" \"cd services/user-service && npm run dev\" \"cd services/product-service && npm run dev\" \"cd services/order-service && npm run dev\"",
+    "build:all": "cd shared/types && npm run build && cd shared/utils && npm run build && cd shared/drizzle && npm run build && cd services/user-service && npm run build && cd services/product-service && npm run build && cd services/order-service && npm run build && cd gateway && npm run build && cd frontend && npm run build",
+    "dev": "concurrently \"cd gateway && npm run dev\" \"cd services/user-service && npm run dev\" \"cd services/product-service && npm run dev\" \"cd services/order-service && npm run dev\" \"cd frontend && npm run dev\"",
+    "dev:backend": "concurrently \"cd gateway && npm run dev\" \"cd services/user-service && npm run dev\" \"cd services/product-service && npm run dev\" \"cd services/order-service && npm run dev\"",
     "dev:gateway": "cd gateway && npm run dev",
     "dev:user": "cd services/user-service && npm run dev",
     "dev:product": "cd services/product-service && npm run dev",
     "dev:order": "cd services/order-service && npm run dev",
+    "dev:frontend": "cd frontend && npm run dev",
     "db:generate": "cd shared/drizzle && npm run generate",
     "db:migrate": "cd shared/drizzle && npm run migrate",
     "db:push": "cd shared/drizzle && npm run push",
