--- a/shared/utils/package.json
+++ b/shared/utils/package.json
@@ -36,16 +36,18 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@soa/shared-types": "workspace:*",
+    "@soa/shared-types": "file:../types",
     "ioredis": "^5.10.0",
-    "winston": "^3.19.0",
     "morgan": "^1.10.1",
-    "zod": "^4.3.6",
-    "nanoid": "^5.0.9"
+    "nanoid": "^5.0.9",
+    "winston": "^3.19.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/node": "^22.10.7",
+    "@types/express": "^5.0.6",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^22.10.7",
+    "@types/winston": "^2.4.4",
     "typescript": "^5.8.0"
   }
 }
