--- a/services/order-service/package.json
+++ b/services/order-service/package.json
@@ -9,15 +9,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@soa/shared-drizzle": "workspace:*",
-    "@soa/shared-types": "workspace:*",
-    "@soa/shared-utils": "workspace:*",
+    "@soa/shared-drizzle": "file:../../shared/drizzle",
+    "@soa/shared-types": "file:../../shared/types",
+    "@soa/shared-utils": "file:../../shared/utils",
     "express": "^5.2.1",
+    "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
-    "express-rate-limit": "^7.5.0"
+    "zod": "^4.3.6",
+    "drizzle-orm": "^0.45.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.10",
     "tsx": "^4.21.0",
     "typescript": "^5.8.0"
   }
