--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -10,11 +10,12 @@
     "test": "echo \"No tests yet\""
   },
   "dependencies": {
-    "@soa/shared-drizzle": "workspace:*",
-    "@soa/shared-types": "workspace:*",
-    "@soa/shared-utils": "workspace:*",
+    "@soa/shared-drizzle": "file:../../shared/drizzle",
+    "@soa/shared-types": "file:../../shared/types",
+    "@soa/shared-utils": "file:../../shared/utils",
     "better-auth": "^1.4.20",
     "bcrypt": "^5.1.1",
+    "nanoid": "^5.0.9",
     "express": "^5.2.1",
     "helmet": "^8.0.0",
     "express-rate-limit": "^7.5.0"
