--- a/gateway/tsconfig.json
+++ b/gateway/tsconfig.json
@@ -13,9 +13,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
-    "verbatimModuleSyntax": true,
-    "declaration": false
+    "declaration": false,
+    "types": ["node"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [
+    { "path": "../shared/types" },
+    { "path": "../shared/utils" }
+  ]
 }
