--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,19 +11,20 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.0.5",
-    "@tanstack/react-router": "^2.1.7",
+    "@tanstack/react-router": "^1.163.3",
     "@radix-ui/react-slot": "^1.2.2",
-    "class-variance-authority": "^0.8.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^2.6.0",
     "lucide-react": "^0.468.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "axios": "^1.8.4"
+    "axios": "^1.8.4",
+    "vite-plugin-windicss": "^1.0.4"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
@@ -35,7 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^4.1.1",
+    "tailwindcss": "^4.0.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^7.3.1"
