--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
+    "drizzle-orm": "^0.45.1",
     "typescript": "^5.8.0"
   },
   "engines": {
