--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,43 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-soa_user}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-soa_password}
       POSTGRES_DB: ${POSTGRES_DB:-soa_db}
+      # PostgreSQL 18 optimizations
+      POSTGRES_MAX_CONNECTIONS: "200"
+      POSTGRES_SHARED_BUFFERS: 256MB
+      POSTGRES_EFFECTIVE_CACHE_SIZE: 768MB
+      POSTGRES_MAINTENANCE_WORK_MEM: 64MB
+      POSTGRES_WORK_MEM: 8MB
+      POSTGRES_MIN_WAL_SIZE: 1GB
+      POSTGRES_MAX_WAL_SIZE: 4GB
+      POSTGRES_WAL_LEVEL: replica
+      POSTGRES_MAX_WAL_SENDERS: 10
+      POSTGRES_IO_METHOD: io_uring
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    command: >
+      postgres
+      -c shared_buffers=${POSTGRES_SHARED_BUFFERS:-256MB}
+      -c effective_cache_size=${POSTGRES_EFFECTIVE_CACHE_SIZE:-768MB}
+      -c maintenance_work_mem=${POSTGRES_MAINTENANCE_WORK_MEM:-64MB}
+      -c work_mem=${POSTGRES_WORK_MEM:-8MB}
+      -c min_wal_size=${POSTGRES_MIN_WAL_SIZE:-1GB}
+      -c max_wal_size=${POSTGRES_MAX_WAL_SIZE:-4GB}
+      -c wal_level=${POSTGRES_WAL_LEVEL:-replica}
+      -c max_wal_senders=${POSTGRES_MAX_WAL_SENDERS:-10}
+      -c io_method=${POSTGRES_IO_METHOD:-io_uring}
+      -c random_page_cost=1.1
+      -c effective_io_concurrency=200
+      -c default_statistics_target=100
+      -c checkpoint_completion_target=0.9
+      -c max_connections=200
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+        reservations:
+          memory: 512M
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-soa_user} -d ${POSTGRES_DB:-soa_db}"]
       interval: 10s
